--- a/Novi.Art/Novi.Art.csproj
+++ b/Novi.Art/Novi.Art.csproj
@@ -121,6 +121,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -131,6 +132,19 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\banner.jpg" />
+    <Content Include="Content\Images\Icons\192x192.png" />
+    <Content Include="Content\Images\Icons\32x32.png" />
+    <Content Include="Content\Images\Icons\logo.png" />
+    <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\Products\abstract.png" />
+    <Content Include="Content\Images\Products\ballerina.jpg" />
+    <Content Include="Content\Images\Products\david.png" />
+    <Content Include="Content\Images\Products\drawing.png" />
+    <Content Include="Content\Images\Products\Eifeltoren.jpg" />
+    <Content Include="Content\Images\Products\lovecouple.png" />
+    <Content Include="Content\Images\Products\mountains.png" />
+    <Content Include="Content\Images\Products\screen.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -162,6 +176,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Product\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
