--- a/Novi.Art/Web.config
+++ b/Novi.Art/Web.config
@@ -13,6 +13,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+	  
+	  <authentication mode="Forms">
+		  <forms loginUrl="/login" defaultUrl="/"/> <!-- redirect unauthenticated user to /login. and after the login redirect to the site -->
+	  </authentication>
+	  
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
