--- a/Novi.Art/Web.config
+++ b/Novi.Art/Web.config
@@ -14,6 +14,8 @@
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
 	  
+	  <customErrors mode="On"></customErrors> <!-- this will tell the exception handler to redirect to the default error page when any exception occurs that's unhandled.  -->
+	  
 	  <authentication mode="Forms">
 		  <forms loginUrl="/login" defaultUrl="/"/> <!-- redirect unauthenticated user to /login. and after the login redirect to the site -->
 	  </authentication>
