- Make partialview _NavBar - Implement partialview in -Layout en -LayoutNoFooter

--- a/Novi.Art/Novi.Art.csproj
+++ b/Novi.Art/Novi.Art.csproj
@@ -195,6 +195,7 @@
     <Content Include="Views\Cart\Icon" />
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutNoFooter.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
